HelloUltraviolet/Fixtures/RejectedSource/Statements/DeferNonLocal/Source/Main.uv
//! Rejected statement specimen for non-local control flow in defer.

public procedure deferNonLocalReference() -> i32 {
    defer {
        return 1
    }
    return 0
}
